# cli-grok-python

./: .gitignore  README.md  emetestmain.go  go.mod  go.sum  pyproject.toml
rclone_encrypt_test_grok_python/: __init__.py  cipher.py  cli.py  eme.py
tests/: test_cli.py
